--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "Kudos Board",
   "dependencies": {
-    "express": "^5.1.0"
+    "@prisma/client": "^6.7.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   }
 }
