--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "Kudos Board",
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.16.0"
   }
