--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+*node_modules
 node_modules
+*package-lock.json
+package-lock.json
 dist
 dist-ssr
 *.local
@@ -22,3 +25,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Private
+*.env
+.env
+
+
