--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-    "prisma": {
-    "seed": "node prisma/seed.js"
+  "prisma": {
+    "seed": "node prisma/seed_boards.js"
   },
   "keywords": [],
   "author": "Bob Main",
